--- a/gradle.properties
+++ b/gradle.properties
@@ -7,8 +7,8 @@ org.gradle.daemon=false
 # Fabric Properties
 # check these on https://fabricmc.net/develop
 minecraft_version=1.20.1
-yarn_mappings=1.20.1+build.3
-loader_version=0.14.21
+yarn_mappings=1.20.1+build.10
+loader_version=0.15.11
 
 # Mod Properties
 mod_version=1.0.0
@@ -17,5 +17,8 @@ maven_group=net.timeworndevs.quantumadds
 archives_base_name=quantumadds
 
 # Dependencies
-fabric_version=0.83.1+1.20.1
+fabric_version=0.92.2+1.20.1
 terrablender_version=3.0.0.167
+figura_version=0.1.4
+luaj = 3.0.8
+nv_websocket = 2.14
