--- a/build.gradle
+++ b/build.gradle
@@ -35,11 +35,7 @@ dependencies {
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 	modImplementation "com.github.glitchfiend:TerraBlender-fabric:${project.minecraft_version}-${project.terrablender_version}"
 
-	modImplementation "org.figuramc:figura-fabric:0.1.4+1.20.1"
-	include(implementation("com.github.FiguraMC.luaj:luaj-core:$luaj-figura"))
-	include(implementation("com.github.FiguraMC.luaj:luaj-jse:$luaj-figura"))
-	include(implementation("com.neovisionaries:nv-websocket-client:$nv_websocket"))
-	include(implementation(annotationProcessor("io.github.llamalad7:mixinextras-fabric:0.3.6")))
+	modCompileOnly("org.figuramc:figura-fabric:0.1.4+1.20.1")
 	// Uncomment the following line to enable the deprecated Fabric API modules.
 	// These are included in the Fabric API production distribution and allow you to update your mod to the latest modules at a later more convenient time.
 
