--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,12 @@ jobs:
     steps:
       - name: checkout repository
         uses: actions/checkout@v4
+      - name: checkout curieapi repository
+        uses: actions/checkout@v4
+        with:
+          repository: The-TImewornDevs/CurieAPI
+          path: ../CurieAPI
+          ref: ${{ github.ref }}
       - name: validate gradle wrapper
         uses: gradle/wrapper-validation-action@v1
       - name: setup jdk ${{ matrix.java }}
