don't look for include builds on CI

--- a/build.gradle
+++ b/build.gradle
@@ -67,8 +67,10 @@ fabricApi {
 	configureDataGeneration()
 }
 
-tasks.withType(JavaCompile) {
-	dependsOn(gradle.includedBuild("CurieAPI").task(":build"))
+if (System.getenv("CI") != null) {
+	tasks.withType(JavaCompile) {
+		dependsOn(gradle.includedBuild("CurieAPI").task(":build"))
+	}
 }
 
 dependencies {
