--- a/settings.gradle
+++ b/settings.gradle
@@ -10,4 +10,6 @@ pluginManagement {
 	}
 }
 rootProject.name = 'CurieContent'
-includeBuild("../CurieAPI")
+if (System.getenv("CI") != null) {
+	includeBuild("../CurieAPI")
+}
