Revert "have we tried ignoring the errors"
This reverts commit 5dea5cc0400148699449400aa1cda19b7565a4f2.

--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,6 @@ pluginManagement {
 	}
 }
 rootProject.name = 'CurieContent'
-try {
+if (System.getenv("CI") != null) {
 	includeBuild("../CurieAPI")
-} catch (any) {}
+}
