--- a/build.gradle
+++ b/build.gradle
@@ -72,10 +72,10 @@ fabricApi {
 	configureDataGeneration()
 }
 
-tasks.withType(JavaCompile) {
-	try {
+if (System.getenv("CI") != null) {
+	tasks.withType(JavaCompile) {
 		dependsOn(gradle.includedBuild("CurieAPI").task(":build"))
-	} catch (any) {}
+	}
 }
 
 dependencies {
