--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ yarn_mappings=1.20.1+build.10
 loader_version=0.16.9
 
 # Mod Properties
-mod_version=1.0.0
+mod_version=1.0.0-SNAPSHOT
 modid=curie-content
 maven_group=net.timeworndevs.curie
 archives_base_name=curie-content
